impr: theme preview ft color palette

--- a/_includes/themes.html
+++ b/_includes/themes.html
@@ -5,20 +5,36 @@
         </summary>
     </details>
     <div class="details-dropdown">
+        <!--Just don't look at this-->
         <div class="theme" data-theme="grayscale">
-            <span class="theme-label">Grayscale</span>
+            <span class="theme-label">Aa</span>
+            <span class="palette-color" style="background-color: var(--grayscale-secondary-color);"></span>
+            <span class="palette-color" style="background-color: var(--grayscale-dim-color);"></span>
+            <span class="palette-color" style="background-color: var(--grayscale-surface-color);"></span>
         </div>
         <div class="theme" data-theme="catppuccin">
-            <span class="theme-label">Catppuccin</span>
+            <span class="theme-label">Aa</span>
+            <span class="palette-color" style="background-color: var(--catppuccin-secondary-color);"></span>
+            <span class="palette-color" style="background-color: var(--catppuccin-dim-color);"></span>
+            <span class="palette-color" style="background-color: var(--catppuccin-surface-color);"></span>
         </div>
         <div class="theme" data-theme="gruvbox">
-            <span class="theme-label">Gruvbox</span>
+            <span class="theme-label">Aa</span>
+            <span class="palette-color" style="background-color: var(--gruvbox-secondary-color);"></span>
+            <span class="palette-color" style="background-color: var(--gruvbox-dim-color);"></span>
+            <span class="palette-color" style="background-color: var(--gruvbox-surface-color);"></span>
         </div>
         <div class="theme" data-theme="everforest">
-            <span class="theme-label">Everforest</span>
+            <span class="theme-label">Aa</span>
+            <span class="palette-color" style="background-color: var(--everforest-secondary-color);"></span>
+            <span class="palette-color" style="background-color: var(--everforest-dim-color);"></span>
+            <span class="palette-color" style="background-color: var(--everforest-surface-color);"></span>
         </div>
         <div class="theme" data-theme="terminal">
-            <span class="theme-label">Terminal</span>
+            <span class="theme-label">Aa</span>
+            <span class="palette-color" style="background-color: var(--terminal-secondary-color);"></span>
+            <span class="palette-color" style="background-color: var(--terminal-dim-color);"></span>
+            <span class="palette-color" style="background-color: var(--terminal-surface-color);"></span>
         </div>
     </div>
 </div>
